Prevent crashes when the QWebView gets reparented.

Wrap the QWindow pointer in a QPointer so it gets set to NULL
when the QWindow gets deleted without notification.

Task-number: QTBUG-39524
Change-Id: I7c8fbe0f6f1921a7b48c58dc502d6a0a3409d084
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@digia.com>